--- a/config.json
+++ b/config.json
@@ -12,16 +12,16 @@
 	"antiInbox": false,
 	"language": "en",
 	"notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-	"nickNameBot": "𓃠",
-	"prefix": "#",
+	"nickNameBot": "your baby ❤️‍🩹",
+	"prefix": "+",
 	"adminOnly": {
 		"enable": false,
 		"ignoreCommand": []
 	},
 	"adminBot": [
-		"100068909067279"
+		"100092366766774"
 	],
-	"owner": ["61569868084629"],
+	"owner": ["100092366766774"],
 	"whiteListMode": {
 		"enable": true,
 		"whiteListIds": [],
