--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
 	"antiInbox": false,
 	"language": "en",
 	"notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-	"nickNameBot": "your baby ❤️‍🩹",
+	"nickNameBot": "🪽🐰 𝐘𝐨𝐮𝐫 𝐱𝐚𝐧🔥🩷",
 	"prefix": "+",
 	"adminOnly": {
 		"enable": false,
