--- a/config.json
+++ b/config.json
@@ -12,16 +12,16 @@
 	"antiInbox": false,
 	"language": "en",
 	"notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-	"nickNameBot": "🪽🐰 𝐘𝐨𝐮𝐫 𝐱𝐚𝐧🔥🩷",
+	"nickNameBot": "🪽🐰 Gandu🔥🩷",
 	"prefix": "+",
 	"adminOnly": {
 		"enable": false,
 		"ignoreCommand": []
 	},
 	"adminBot": [
-		"100092366766774"
+		"100043250142520"
 	],
-	"owner": ["100092366766774"],
+	"owner": ["100043250142520"],
 	"whiteListMode": {
 		"enable": true,
 		"whiteListIds": [],
